<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />

        <variable
            name="onSaveButtonClicked"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/select_location_parent_layout"
        android:layout_height="match_parent">

        <Button
            android:enabled="true"
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/save"
            android:onClick="@{onSaveButtonClicked}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--map fragment for the user to select the location
            map is styled by Cloud based maps styling using mapId-->
        <fragment
            xmlns:map="http://schemas.android.com/apk/res-auto"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:mapId="@string/google_cloud_map_id"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
